--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=bb5434d5085012f009406884b2c66fa3
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://llhorens:12345@127.0.0.1:3306/DTfood"
+DATABASE_URL="mysql://bastien:dell25110@127.0.0.1:3306/DTfood"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
